--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
-  postgres:
+  postgres2:
     image: 'postgres:16.0'
-    container_name: 'postgres'
+    container_name: 'postgres2'
     environment:
       - 'POSTGRES_DB=hw1'
       - 'POSTGRES_PASSWORD=hw103032024'
       - 'POSTGRES_USER=sumkin'
     ports:
-      - '5444:5432'
+      - '5445:5432'
 
   app:
     build:
@@ -16,23 +16,23 @@ services:
       dockerfile: Dockerfile
     container_name: 'app'
     ports:
-      - '8082:8082'
+      - '8084:8084'
     depends_on:
-      - 'postgres'
+      - 'postgres2'
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/hw1?currentSchema=hw1
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres2:5432/hw1?currentSchema=hw1
       SPRING_DATASOURCE_USERNAME: sumkin
       SPRING_DATASOURCE_PASSWORD: hw103032024
       SPRING_DATASOURCE_DRIVER-CLASS-NAME: org.postgresql.Driver
       SPRING_JPA_PROPERTIES_HIBERNATE_DEFAULT_SCHEMA: hw1
-      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: true
-      SPRING_JPA_SHOW-SQL: true
+      SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL: 'true'
+      SPRING_JPA_SHOW-SQL: 'true'
       SPRING_LIQUIBASE_CHANGE-LOG: classpath:liquibase/changelog.yaml
-      SPRING_LIQUIBASE_ENABLED: true
+      SPRING_LIQUIBASE_ENABLED: 'true'
       SPRING_LIQUIBASE_DEFAULT-SCHEMA: liquibase
-      SPRING_PRELIQUIBASE_ENABLED: true
-      SPRINGDOC_OVERRIDE-WITH-GENERIC-RESPONSE: false
-      SERVER_PORT: 8082
+      SPRING_PRELIQUIBASE_ENABLED: 'true'
+      SPRINGDOC_OVERRIDE-WITH-GENERIC-RESPONSE: 'false'
+      SERVER_PORT: 8084
 
   test-service:
     build:
@@ -43,7 +43,7 @@ services:
       - '8083:8083'
     environment:
       SERVER_PORT: 8083
-      MYURL: http://app:8082
+      MYURL: http://app:8084
     depends_on:
       - 'app'
     restart: on-failure
